--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# ????????JSON ???????
+pro_tube.metadata.dir=C:/video
+
+# ?????????MP4 ???????
+pro_tube.store.dir=C:/video
+
 spring.application.name=protube-back
 server.port=8080
 spring.thymeleaf.prefix=classpath:/static/
@@ -9,7 +15,7 @@ spring.profiles.active=@spring.profiles.active@
 
 # Before running the process you must have this system-level environment variable set: ENV_PROTUBE_STORE_DIR
 # It must hold the absolute path to the directory containing the videos (and any other file-based storage)
-pro_tube.store.dir=${ENV_PROTUBE_STORE_DIR}
+#pro_tube.store.dir=${ENV_PROTUBE_STORE_DIR}
 
 spring.security.oauth2.client.registration.google.client-id=${ENV_PROTUBE_GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${ENV_PROTUBE_GOOGLE_CLIENT_SECRET}
@@ -36,14 +42,26 @@ spring.datasource.hikari.minimum-idle=5
 #---
 spring.config.activate.on-profile=prod
 pro_tube.load_initial_data=false
-# In case you want to use PostgreSQL, uncomment the following line and ensure the ENV_PROTUBE_DB environment variable is set correctly
-# spring.datasource.url=jdbc:postgresql://localhost:5432/${ENV_PROTUBE_DB}
-spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=${ENV_PROTUBE_DB_USER}
-spring.datasource.password=${ENV_PROTUBE_DB_PWD}
+
+# PostgreSQL ???????
+spring.datasource.url=jdbc:postgresql://localhost:5432/myappdb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=admin
+spring.datasource.password=123456
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ????????JSON ???????
+pro_tube.metadata.dir=C:/videos
+
+# ?????????MP4 ???????
+pro_tube.store.dir=C:/videos
+
 
 spring.mvc.static-path-pattern=/media/**
 logging.level.org.springframework.web=DEBUG
+
+
 
 
