enable video streaming from local 'videos' directory
The backend can now read video metadata (JSON) and stream video files (MP4)
from the local folder 'C:/videos'. Each video can be accessed via its ID,
for example: http://localhost:8080/api/videos/100.
Added file logging to trace which videos are loaded and their IDs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# ????????JSON ???????
-pro_tube.metadata.dir=C:/video
 
-# ?????????MP4 ???????
-pro_tube.store.dir=C:/video
+pro_tube.metadata.dir=C:/videos
+
+
+pro_tube.store.dir=C:/videos
 
 spring.application.name=protube-back
 server.port=8080
@@ -52,10 +52,9 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# ????????JSON ???????
+
 pro_tube.metadata.dir=C:/videos
 
-# ?????????MP4 ???????
 pro_tube.store.dir=C:/videos
 
 
