--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,22 +1,62 @@
-
-pro_tube.metadata.dir=C:/videos
-
-
-pro_tube.store.dir=C:/videos
-
+############################################################
+# ? ??????????????
+############################################################
 spring.application.name=protube-back
 server.port=8080
-spring.thymeleaf.prefix=classpath:/static/
 
+# ??????
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-spring.profiles.active=@spring.profiles.active@
+# ??????
+spring.mvc.static-path-pattern=/media/**
 
-# Before running the process you must have this system-level environment variable set: ENV_PROTUBE_STORE_DIR
-# It must hold the absolute path to the directory containing the videos (and any other file-based storage)
-#pro_tube.store.dir=${ENV_PROTUBE_STORE_DIR}
+# Thymeleaf ??????????
+spring.thymeleaf.prefix=classpath:/static/
 
+# ????
+logging.level.org.springframework.web=DEBUG
+
+# ????
+spring.profiles.active=dev
+
+
+############################################################
+# ? ?????????????? H2?
+############################################################
+#spring.config.activate.on-profile=dev
+
+# ? ????????? dev ???
+pro_tube.metadata.dir=C:/videos
+pro_tube.store.dir=C:/videos
+
+# ????????
+pro_tube.load_initial_data=true
+
+# H2 ?????
+spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ??????HikariCP?
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+
+# JPA & Hibernate ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+# ? ?? H2 ???
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
+############################################################
+# ? Google OAuth ??????
+############################################################
 spring.security.oauth2.client.registration.google.client-id=${ENV_PROTUBE_GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${ENV_PROTUBE_GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
@@ -26,41 +66,3 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
-
-#---
-spring.config.activate.on-profile=dev
-pro_tube.load_initial_data=true
-spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.sql.init.platform=h2
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-
-#---
-spring.config.activate.on-profile=prod
-pro_tube.load_initial_data=false
-
-# PostgreSQL ???????
-spring.datasource.url=jdbc:postgresql://localhost:5432/myappdb
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=admin
-spring.datasource.password=123456
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-pro_tube.metadata.dir=C:/videos
-
-pro_tube.store.dir=C:/videos
-
-
-spring.mvc.static-path-pattern=/media/**
-logging.level.org.springframework.web=DEBUG
-
-
-
-
