Variables de entorno

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.profiles.active=dev
 #spring.config.activate.on-profile=dev
 
 # ? ????????? dev ???
-pro_tube.metadata.dir=C:/videos
-pro_tube.store.dir=C:/videos
+pro_tube.metadata.dir=${ENV_PROTUBE_STORE_DIR}
+pro_tube.store.dir=${ENV_PROTUBE_STORE_DIR}
 
 # ????????
 pro_tube.load_initial_data=true
