Implementación del registro e inicio de sesión de usuarios con cifrado de contraseñas
- Se añadieron los endpoints de registro e inicio de sesión (/api/auth/register, /api/auth/login)
- Implementación del cifrado de contraseñas con BCrypt para mejorar la seguridad
- Configuración de Spring Security para permitir acceso a /api/auth/** y /h2-console/**
- Corrección del error en la lógica de verificación de usuario existente (existsByUsername)
- Verificación de almacenamiento correcto de usuarios en la base de datos H2
- Pruebas exitosas con Postman: registro, inicio de sesión y validación de contraseñas funcionando correctamente

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.12</version>
         </dependency>
+        <!-- Spring Security 核心依赖，用于加密、认证 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
