feat: add video upload feature with optional custom thumbnail

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -19,7 +19,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "jest", "@testing-library/jest-dom"]
+    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src", "jest-setup.js"]
 }
