--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "i18next": "^25.6.3",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.3.5",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-i18next": "^7.8.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.1",
     "babel-jest": "^30.0.5",
