--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,62 +1,44 @@
-############################################################
-# ? ??????????????
-############################################################
 spring.application.name=protube-back
 server.port=8080
 
-# ??????
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-# ??????
 spring.mvc.static-path-pattern=/media/**
 
-# Thymeleaf ??????????
 spring.thymeleaf.prefix=classpath:/static/
 
-# ????
 logging.level.org.springframework.web=DEBUG
 
-# ????
 spring.profiles.active=dev
 
-
-############################################################
-# ? ?????????????? H2?
-############################################################
 #spring.config.activate.on-profile=dev
 
-# ? ????????? dev ???
-pro_tube.metadata.dir=${ENV_PROTUBE_STORE_DIR}
+pro_tube.initial_videos.dir=${ENV_PROTUBE_INITIAL_VIDEOS_DIR}
 pro_tube.store.dir=${ENV_PROTUBE_STORE_DIR}
+pro_tube.videos.dir=${pro_tube.store.dir}videos/
+pro_tube.thumbnails.dir=${pro_tube.store.dir}thumbnails/
 
-# ????????
-pro_tube.load_initial_data=true
+pro_tube.load_initial_data=${ENV_PROTUBE_LOAD_INITIAL_DATA:true}
 
-# H2 ?????
+
 spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# ??????HikariCP?
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 
-# JPA & Hibernate ??
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
-# ? ?? H2 ???
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 
-############################################################
-# ? Google OAuth ??????
-############################################################
 spring.security.oauth2.client.registration.google.client-id=${ENV_PROTUBE_GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${ENV_PROTUBE_GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
