--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,7 @@ pro_tube.videos.dir=${pro_tube.store.dir}videos/
 pro_tube.thumbnails.dir=${pro_tube.store.dir}thumbnails/
 
 pro_tube.load_initial_data=${ENV_PROTUBE_LOAD_INITIAL_DATA:true}
+pro_tube.delete_previous_data=${ENV_PROTUBE_DELETE_PREVIOUS_DATA:true}
 
 
 spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
