Final fix (espero)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.profiles.active=dev
 
 pro_tube.initial_videos.dir=${ENV_PROTUBE_INITIAL_VIDEOS_DIR}
 pro_tube.store.dir=${ENV_PROTUBE_STORE_DIR}
-pro_tube.videos.dir=${pro_tube.store.dir}videos/
-pro_tube.thumbnails.dir=${pro_tube.store.dir}thumbnails/
+pro_tube.videos.dir=${pro_tube.store.dir}/videos/
+pro_tube.thumbnails.dir=${pro_tube.store.dir}/thumbnails/
 
 pro_tube.load_initial_data=${ENV_PROTUBE_LOAD_INITIAL_DATA:true}
 pro_tube.delete_previous_data=${ENV_PROTUBE_DELETE_PREVIOUS_DATA:true}
